--- a/index.html
+++ b/index.html
@@ -91,8 +91,16 @@
         </form>
       </div>
     </div>
-
-    <script src="./script/index.js"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "@google/generative-ai": "https://esm.run/@google/generative-ai"
+        }
+      }
+    </script>
+    <!-- <script type="module" src="../script/myAi.js"></script>
+    <script type="module" src="../script/ai.js"></script> -->
+    <script type="module" src="./script/index.js"></script>
     <script>
       
     </script>
